# reg-api

./: README.md  pyproject.toml  reg-api.plugin.zsh
functions/: add-shadow.json  reg
implementations/nvim/: nvim-executor  nvim-executor-lib.zsh  server.conf  start-nvim-reg  term-nvim-reg
implementations/nvim/lua/reg/: coproc.lua  dispatch.lua  init.lua  ipc.lua
implementations/tmux/: reg-api.tmux.conf  server.conf  start-tmux-reg.zsh  tmux-executor-lib.zsh  tmux-executor.zsh  tmux-hook-lib.zsh  tmux-lib.zsh
lib/: executor-lib.zsh
old_functions/: reg
reg/: __init__.py  api.py  errors.py  model.py  rpc_processor.py  service.py  syncer.py
